# xworld

./: .gitignore  03_lynx_hare_pipeline.ipynb  05_cluster_all.ipynb  08_ecg_pipeline.ipynb  11_baseline_delta.ipynb  12_observer_independence.ipynb  14_pairwise_distances.ipynb  15_sea_level.ipynb  18_stability_test.ipynb  19_autoencoder.ipynb  20_chronos.ipynb  21_noisy_directional_refinement.ipynb  24_pdo_window_snow_cover_orientation.ipynb  25_xworld_grokking.ipynb  27_real_transfer_6f_grokking.ipynb  28_declining_osc_conditions.ipynb  29_absolute_fingerprint_9th_class.ipynb  33_blackjack_embedding.ipynb  37_window_observer.ipynb  39_tda_rqa_test.ipynb  404.html  43_scale_inflection.ipynb  44_corpus_scale_scan.ipynb  45_signal_decomposition.ipynb  46_shape_composition_grokking.ipynb  47_composition_attractor_geometry.ipynb  PAPER.md  Untitled.ipynb  data_utils.py  index.html  make_pdf.py  mkdocs.yml  pyproject.toml  random_chats_x_world.txt
.claude/: settings.local.json
DECISIONS/: index.html
EXPERIMENTS/: index.html
FINDINGS/: index.html
MILESTONES/: index.html
data/: antarctic_sea_ice_monthly.csv  arctic_sea_ice_monthly.csv  enso_meiv2.txt  noaa_battery_tidal_2023.csv  piomas_monthly.txt  snow_cover_nh.txt  sunspot_monthly.txt  worldbank_forest_cover.json
docs/: mkdocs.yml
notebooks/: 01_covid_pipeline.ipynb  02_sunspot_pipeline.ipynb  04_keeling_pipeline.ipynb  06_covid_second_wave.ipynb  07_temperature_pipeline.ipynb  09_cluster_extended.ipynb  10_streamflow_pipeline.ipynb  11_baseline_delta.ipynb  12_observer_independence.ipynb  13_combined_features.ipynb  14_pairwise_distances.ipynb  15_sea_level.ipynb  16_enso.ipynb  17_vix.ipynb  18_stability_test.ipynb  19_autoencoder.ipynb  20_chronos.ipynb  22_declining_oscillator_confirmation.ipynb  23_latent_arithmetic_xworld.ipynb  25_xworld_grokking.ipynb  26_contrastive_shape_manifold.ipynb  28_declining_osc_conditions.ipynb  29_absolute_fingerprint_9th_class.ipynb  30_9th_class_corpus.ipynb  31_9class_full_corpus_audit.ipynb  32_ode_basis.ipynb  34_ode_anomaly_resolution.ipynb  35_ode_eigenvalue_map.ipynb  36_chaos_survey.ipynb  (+40 more)
(+65 files in other folders)
